--- a/Catalyst/Base.lproj/LaunchScreen.xib
+++ b/Catalyst/Base.lproj/LaunchScreen.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -7,17 +7,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="458" height="482"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SplashScreen_Initial3.png" translatesAutoresizingMaskIntoConstraints="NO" id="tKB-Es-0GV">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashScreen_Initial3.png" translatesAutoresizingMaskIntoConstraints="NO" id="OuK-lE-GOP">
+                    <rect key="frame" x="-22" y="-25" width="480" height="507"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="OuK-lE-GOP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-25" id="5be-G4-JXj"/>
+                <constraint firstAttribute="trailing" secondItem="OuK-lE-GOP" secondAttribute="trailing" id="NT6-FG-NNb"/>
+                <constraint firstAttribute="bottom" secondItem="OuK-lE-GOP" secondAttribute="bottom" id="bOy-Tk-tFQ"/>
+                <constraint firstItem="OuK-lE-GOP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="-22" id="jbC-0V-q0N"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="537" y="456"/>
         </view>
     </objects>
     <resources>
