--- a/Catalyst/Base.lproj/Main.storyboard
+++ b/Catalyst/Base.lproj/Main.storyboard
@@ -130,10 +130,7 @@
                                     <color key="titleShadowColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="loginButtonClicked:" destination="F0B-Qp-rNh" eventType="touchUpInside" id="ZPp-SI-z8N"/>
-                                    <segue destination="vXZ-lx-hvc" kind="popoverPresentation" popoverAnchorView="90s-3C-TnQ" id="DoI-eJ-FO7">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
+                                    <action selector="loginButtonClicked:" destination="F0B-Qp-rNh" eventType="touchDown" id="dUZ-7n-Fhf"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8J9-PW-dXV">
@@ -166,7 +163,11 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="loginButton" destination="90s-3C-TnQ" id="TtI-L5-G97"/>
+                        <outlet property="passwordField" destination="dPm-6X-ysl" id="FdX-4m-PTI"/>
                         <outlet property="usernameField" destination="8J9-PW-dXV" id="Y7h-fs-pM3"/>
+                        <segue destination="vXZ-lx-hvc" kind="popoverPresentation" identifier="loginSegue" popoverAnchorView="orP-Ta-8N0" id="7Ea-hL-Q2v">
+                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                        </segue>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aCk-Vj-bsF" userLabel="First Responder" sceneMemberID="firstResponder"/>
